--- a/stylesheets/col2.css
+++ b/stylesheets/col2.css
@@ -39,7 +39,7 @@ p{
 
 .gray-out-next-on-non-active:not(.active) ~*,
 .grayOut{
-	color: gray;
+	color: #595959;
 	background-color: lightgray;
 }
 
@@ -68,7 +68,7 @@ p{
 }
 
 .helpText{
-		color: gray;
+		color: #696969;
 }
 
 .colorPicker{
@@ -205,13 +205,12 @@ p{
 
 
 .important{
-	color:#fff;
-	text-shadow:#C17C3A 0 -1px 0; /* NOTISE: not the same color... */
+	color: black;
 }
 
 
 .important td {
-	color: #fff;
+	color: black;
 	text-shadow: none;
 }
 
