--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -826,6 +826,7 @@ table {
 	z-index: 1;
 }
 
+a { color: #0051A8; }
 
 .centerRoundButtCommon{
 	position: relative;
